<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_touch_feedback"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_touch_feedback"
            android:textAllCaps="false"/>

        <Button
            android:id="@+id/btn_reveal_effect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_reveal_effect"
            android:textAllCaps="false"/>

        <Button
            android:id="@+id/btn_activity_transitions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_activity_transitions"
            android:textAllCaps="false"/>

        <Button
            android:id="@+id/btn_curved_motion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_curved_motion"
            android:textAllCaps="false"/>

        <Button
            android:id="@+id/btn_view_state_changes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_view_state_changes"
            android:textAllCaps="false"/>

        <Button
            android:id="@+id/btn_animate_vector_drawables"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_animate_vector_drawables"
            android:textAllCaps="false"/>
    </LinearLayout>
</RelativeLayout>
