<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_object_animator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_object_animator"
            android:textAllCaps="false"/>

        <Button
            android:id="@+id/btn_value_animator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_value_animator"
            android:textAllCaps="false"/>

        <Button
            android:id="@+id/btn_interpolator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_interpolator"
            android:textAllCaps="false"/>

        <Button
            android:id="@+id/btn_type_evaluator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_type_evaluator"
            android:textAllCaps="false"/>
    </LinearLayout>
</RelativeLayout>
