<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/txt_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:textAllCaps="false"
        android:textSize="20sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_value_animator_with_xml"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_value_animator_with_xml"
            android:textAllCaps="false"/>

        <Button
            android:id="@+id/btn_value_animator_set_with_xml"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_value_animator_set_with_xml"
            android:textAllCaps="false"/>

        <Button
            android:id="@+id/btn_value_animator_with_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_value_animator_with_code"
            android:textAllCaps="false"/>

        <Button
            android:id="@+id/btn_value_animator_set_with_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_value_animator_set_with_code"
            android:textAllCaps="false"/>

        <Button
            android:id="@+id/btn_value_animator_set_with_pvh_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_value_animator_set_with_pvh_code"
            android:textAllCaps="false"/>

    </LinearLayout>
</RelativeLayout>
