<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_tween_animation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_tween_animation"
            android:textAllCaps="false"/>

        <Button
            android:id="@+id/btn_frame_animation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_frame_animation"
            android:textAllCaps="false"/>

        <Button
            android:id="@+id/btn_property_animation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_property_animation"
            android:textAllCaps="false"/>

    </LinearLayout>
</RelativeLayout>
